cluster/media/calibre-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  annotations:
    nginx.ingress.kubernetes.io/auth-url: |-
      http://ak-outpost-media-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://auth.chrismiller.xyz/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: chrismiller.xyz
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "Content-Security-Policy";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calibre.chrismiller.xyz
      secretName: calibre-web-tls
  rules:
    - host: calibre.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 80
